; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msi/extr_db.c_read_file_data.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msi/extr_db.c_read_file_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GENERIC_READ = common dso_local global i32 0, align 4
@FILE_SHARE_READ = common dso_local global i32 0, align 4
@OPEN_EXISTING = common dso_local global i32 0, align 4
@MAX_PATH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @read_file_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_file_data(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @GENERIC_READ, align 4
  %9 = load i32, i32* @FILE_SHARE_READ, align 4
  %10 = load i32, i32* @OPEN_EXISTING, align 4
  %11 = call i32 @CreateFileA(i32 %7, i32 %8, i32 %9, i32* null, i32 %10, i32 0, i32* null)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @MAX_PATH, align 4
  %14 = call i32 @ZeroMemory(i32 %12, i32 %13)
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @MAX_PATH, align 4
  %18 = call i32 @ReadFile(i32 %15, i32 %16, i32 %17, i32* %6, i32* null)
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @CloseHandle(i32 %19)
  ret void
}

declare dso_local i32 @CreateFileA(i32, i32, i32, i32*, i32, i32, i32*) #1

declare dso_local i32 @ZeroMemory(i32, i32) #1

declare dso_local i32 @ReadFile(i32, i32, i32, i32*, i32*) #1

declare dso_local i32 @CloseHandle(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
